# learn-graphics

./: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: basic-fragment.glsl  basic-vertex.glsl  color-in-fragment.glsl  color-vertex.glsl  fill-fragment.glsl
src/gl/: 1-window.c  2-triangle.c  3-quad.c  4-shaders-uniform.c  4-shaders.c  5-shaders-vertex-attrib.c  6-texture.c  base.h  files.h  shaders.h  textures.h
src/scan/: display.h  line-incremental.c  math.h
